<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="profileDisplayViewmodel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.ProfileDisplayViewmodel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="407dp"
                    android:cropToPadding="true"
                    tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

                <TextView
                    android:id="@+id/textView_profile_display_fragment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@={profileDisplayViewmodel.userID}"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_profile_display_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@={profileDisplayViewmodel.userDesc}"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_profile_display_fragment_user_recipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/profile_display_erstellte_rezepte"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/profileDisplayRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_profile_display_fragment_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:padding="10dp"
                        android:text="@string/profile_display_edit_profile_button" />

                    <Button
                        android:id="@+id/button_profile_display_fragment_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/logout" />

                    <Button
                        android:id="@+id/button_profile_display_fragment_flag_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/flag_user" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>